# tinyIPC

./: .clang-tidy  .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh
applications/: CMakeLists.txt
applications/main/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt  README.md
base/common/: CMakeLists.txt
base/common/include/: config.h
base/common/include/common/: config.h
base/common/include/config/: config.h
base/common/src/: CMakeLists.txt  config.cpp  config.h
base/config/include/common/: config.h
base/config/src/: config.cpp  config.h
base/utils/: CMakeLists.txt
base/utils/include/: delegate.h  timer.h
base/utils/include/detail/: delegate.h  delegateTemplate.h
base/utils/include/utils/: directory_ex.h  file_ex.h  noncopyable.h  securectype.h  timer.h
base/utils/src/: CMakeLists.txt  directory_ex.cpp  file_ex.cpp
cmake/: cv500.cmake  m64x86.cmake
commonlibrary/utils/: CMakeLists.txt
commonlibrary/utils/include/utils/: directory_ex.h  file_ex.h  noncopyable.h  securec.h  timer.h  utils_log.h
commonlibrary/utils/src/: directory_ex.cpp  file_ex.cpp
device/: README.md
device/panda/: README.md
doc/zh/: 架构.drawio
drivers/: CMakeLists.txt  README.md
drivers/peripheral/camera/include/: plat_video_enc.h
drivers/peripheral/camera/src/: README.md  plat_video_enc.cpp
drivers/peripheral/media/src/: sample_venc.c
drivers/peripheral/media/src/common/: sample_comm_venc.c
foundation/: README.md
foundation/common/include/: config.h
foundation/common/src/: config.cpp
foundation/config/: README.md
foundation/media/include/: plat_define.h
foundation/media/src/: CMakeLists.txt  sample_venc.h
foundation/media/src/common/: sample_comm_isp.c  sample_comm_vi.c
foundation/media/src/test/: media_test.cpp
foundation/muxer/: README.md
foundation/record/: README.md
foundation/stream/: README.md
foundation/utils/: README.md
foundation/utils/include/: config.h  define.h  noncopyable.h  signal.h
foundation/utils/include/detail/: signalTemplate.h
foundation/utils/src/: config.cpp
libs/include/openssl/: configuration.h
libs/lib/3516dv300/: libcrypto.so.3  libosip2.la  libosipparser2.la
libs/lib/cv500/: libssl.so.3
